--- a/.github/workflows/ccdl-ci.yml
+++ b/.github/workflows/ccdl-ci.yml
@@ -41,10 +41,6 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-        
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
@@ -52,5 +48,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./dist/CcdlSimpleStarter.exe
-          asset_name: ccdl_${{ steps.get_version.outputs.VERSION }}.exe
+          asset_name: ccdl_${{ github.ref }}.exe
           asset_content_type: application/x-ms-dos-executable
