--- a/.github/workflows/ccdl-ci.yml
+++ b/.github/workflows/ccdl-ci.yml
@@ -12,15 +12,15 @@ jobs:
       - name: Checkout 
         uses: actions/checkout@v2
       
-      - name: Set up Python 3.8
+      - name: Set up Python 3.7
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.7
       
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install --upgrade setuptools wheel
+          pip install setuptools wheel --upgrade
           pip install -r requirements.txt
           pip install pyinstaller
       
