fix: follow linters

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,9 @@ profile = black
 [flake8]
 indent-size = 4
 max-line-length = 120
-extend-ignore = W605
+extend-ignore =
+    E741  # ambiguous variable name 'l'
+    W605  # invalid escape sequence '\w'
 
 [mypy]
 python_version = 3.9
