--- a/setup.cfg
+++ b/setup.cfg
@@ -20,14 +20,14 @@ classifiers =
 [options]
 packages = ccdl
 install_requires =
+    Pillow>=9.1.0
+    aiohttp>=3.8.1
     lxml>=4.8.0
     numpy>=1.21.6
-    Pillow>=9.1.0
-    urllib3>=1.26.9
+    pyexecjs==1.5.1
     requests>=2.27.1
     selenium>=4.1.3
-    pyexecjs==1.5.1
-    aiohttp>=3.8.1
+    urllib3>=1.26.9
 packages_data =
     ccdl = py.typed
 python_requires = >= 3.7
@@ -38,18 +38,19 @@ console_scripts =
 
 [options.extras_require]
 type =
-    types-setuptools
     lxml-stubs
     types-Pillow
-    types-urllib3
     types-requests
     types-selenium
+    types-setuptools
+    types-urllib3
 dev =
     black
     flake8
+    isort
+    pyinstaller
     setuptools>=46.4.0
     wheel
-    pyinstaller
     %(type)s
 
 [isort]
