--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./dist/main.exe
-          asset_name: ccdl_${{ github.ref }}.exe
+          asset_name: ccdl_${{ github.event.release.tag_name }}.exe
           asset_content_type: application/x-ms-dos-executable
 
       - name: Upload Release Asset for Mac
@@ -70,7 +70,7 @@ jobs:
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./dist/main
-          asset_name: ccdl_mac_${{ github.ref }}
+          asset_name: ccdl_mac_${{ github.event.release.tag_name }}
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset for Linux
@@ -81,5 +81,5 @@ jobs:
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./dist/main
-          asset_name: ccdl_linux_${{ github.ref }}
+          asset_name: ccdl_linux_${{ github.event.release.tag_name }}
           asset_content_type: application/octet-stream
