--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./dist/main.exe
-          asset_name: ccdl_${{ github.event.release.tag_name }}.exe
+          asset_name: ccdl_${{ github.ref_name }}.exe
           asset_content_type: application/x-ms-dos-executable
 
       - name: Upload Release Asset for Mac
@@ -87,7 +87,7 @@ jobs:
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./dist/main
-          asset_name: ccdl_mac_${{ github.event.release.tag_name }}
+          asset_name: ccdl_mac_${{ github.ref_name }}
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset for Linux
@@ -98,5 +98,5 @@ jobs:
         with:
           upload_url: ${{ needs.release.outputs.upload_url }}
           asset_path: ./dist/main
-          asset_name: ccdl_linux_${{ github.event.release.tag_name }}
+          asset_name: ccdl_linux_${{ github.ref_name }}
           asset_content_type: application/octet-stream
