--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,30 @@
-name: Release
+name: Release Package
+
+# need to setup:
+# secrets.PYPI_PASSWORD (See: https://pypi.org/help/#apitoken)
 
 on:
   push:
     tags:
-      - "v*"
-env:
-  python-version: "3.8"
+      - 'v*'
 
 jobs:
-  pre-commit:
+  check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Python ${{ env.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ env.python-version }}
-
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v3
       - name: Run pre-commit
         uses: pre-commit/action@v2.0.3
-
   release:
-    needs: pre-commit
+    needs: check
+    name: Create Release
     runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -38,65 +35,58 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-
-  build:
+  pypi:
     needs: release
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - windows-latest
-          - ubuntu-latest
-          - macos-latest
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Python ${{ env.python-version }}
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
         with:
-          python-version: ${{ env.python-version }}
-
+          persist-credentials: false
+      - name: Setup Python
+        uses: actions/setup-python@v3
+        with:
+          cache: pip
+          cache-dependency-path: setup.cfg
+          python-version: "3.x"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
-
-      - name: Build executable
+          pip install setuptools wheel twine
+      - name: Build
         run: |
-          pyinstaller -F ./ccdl/main.py
-          ls dist
-
-      - name: Upload Release Asset for Win
-        if: runner.os == 'Windows'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          python setup.py sdist bdist_wheel
+      - name: Publish a Python distribution to PyPI
+        if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
+        uses: pypa/gh-action-pypi-publish@master
         with:
-          upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./dist/main.exe
-          asset_name: ccdl_${{ github.ref_name }}.exe
-          asset_content_type: application/x-ms-dos-executable
-
-      - name: Upload Release Asset for Mac
-        if: runner.os == 'macOS'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          user: __token__
+          password: ${{ secrets.PYPI_PASSWORD }}
+          skip_existing: true
+          verbose: true
+  ghcr:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: docker/setup-buildx-action@v2
+        id: buildx
         with:
-          upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./dist/main
-          asset_name: ccdl_mac_${{ github.ref_name }}
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Asset for Linux
-        if: runner.os == 'Linux'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          install: true
+      - uses: docker/metadata-action@v4
+        id: meta
         with:
-          upload_url: ${{ needs.release.outputs.upload_url }}
-          asset_path: ./dist/main
-          asset_name: ccdl_linux_${{ github.ref_name }}
-          asset_content_type: application/octet-stream
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+      - uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
