--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,92 +1,48 @@
-name: Release Package
-
-# need to setup:
-# secrets.PYPI_PASSWORD (See: https://pypi.org/help/#apitoken)
+name: Release
 
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
-  check:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: windows-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v3
-      - name: Run pre-commit
-        uses: pre-commit/action@v2.0.3
-  release:
-    needs: check
-    name: Create Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+          cache: pip
+          cache-dependency-path: setup.cfg
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .[dev]
+
+      - name: Build executable
+        run: |
+          python ./setup.py install
+          pyinstaller -F ./CcdlSimpleStarter.py
+          cd ./dist
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-  pypi:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
         with:
-          persist-credentials: false
-      - name: Setup Python
-        uses: actions/setup-python@v3
-        with:
-          cache: pip
-          cache-dependency-path: setup.cfg
-          python-version: "3.x"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
-      - name: Build
-        run: |
-          python setup.py sdist bdist_wheel
-      - name: Publish a Python distribution to PyPI
-        if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
-        uses: pypa/gh-action-pypi-publish@master
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_PASSWORD }}
-          skip_existing: true
-          verbose: true
-  ghcr:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/setup-buildx-action@v2
-        id: buildx
-        with:
-          install: true
-      - uses: docker/metadata-action@v4
-        id: meta
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-      - uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/CcdlSimpleStarter.exe
+          asset_name: ccdl_${{ github.ref }}.exe
+          asset_content_type: application/x-ms-dos-executable
