--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,60 +1,66 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-      - id: check-added-large-files
-      - id: check-ast
-      - id: check-case-conflict
-      - id: check-executables-have-shebangs
-      - id: check-merge-conflict
-      - id: check-symlinks
-      - id: check-yaml
-      - id: debug-statements
-      - id: destroyed-symlinks
-      - id: end-of-file-fixer
-        exclude: tests/test_changes/
-        files: \.(py|sh|rst|yml|yaml)$
-      - id: mixed-line-ending
-      - id: trailing-whitespace
-        files: \.(py|sh|rst|yml|yaml)$
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
-    hooks:
-      - id: setup-cfg-fmt
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
-    hooks:
-      - id: pyupgrade
-  - repo: https://github.com/psf/black
-    rev: 23.1.0
-    hooks:
-      - id: black
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
-    hooks:
-      - id: flake8
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.0.0
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          [
-            lxml-stubs,
-            types-Pillow,
-            types-urllib3,
-            types-requests,
-            types-selenium,
-            aiohttp,
-            numpy,
-          ]
-        files: ^ccdl/
-        # args: [--strict]
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.33.0
-    hooks:
-      - id: markdownlint
-        args: [--disable=MD013]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+  - id: check-added-large-files
+    args: [--maxkb=2000]
+  - id: check-ast
+  - id: check-case-conflict
+  - id: check-executables-have-shebangs
+  - id: check-merge-conflict
+  - id: check-symlinks
+  - id: check-toml
+  - id: check-yaml
+  - id: debug-statements
+  - id: destroyed-symlinks
+  - id: end-of-file-fixer
+    files: \.(py|sh|rst|yml|yaml)$
+  - id: mixed-line-ending
+  - id: trailing-whitespace
+    files: \.(py|sh|rst|yml|yaml)$
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v2.6.0
+  hooks:
+  - id: pretty-format-yaml
+    args: [--autofix, --indent, '2']
+- repo: https://github.com/asottile/setup-cfg-fmt
+  rev: v2.2.0
+  hooks:
+  - id: setup-cfg-fmt
+- repo: https://github.com/asottile/pyupgrade
+  rev: v3.3.1
+  hooks:
+  - id: pyupgrade
+- repo: https://github.com/psf/black
+  rev: 23.1.0
+  hooks:
+  - id: black
+- repo: https://github.com/pycqa/isort
+  rev: 5.12.0
+  hooks:
+  - id: isort
+# - repo: https://github.com/charliermarsh/ruff-pre-commit
+#   rev: v0.0.246
+#   hooks:
+#    - id: ruff
+#      args: [--fix]
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: v1.0.0
+#    hooks:
+#    - id: mypy
+#      files: ^ccdl/
+#      additional_dependencies:
+#      - aiohttp
+#      - lxml-stubs
+#      - numpy
+#      - types-Pillow
+#      - types-urllib3
+#      - types-requests
+#      - types-selenium
+#      args: []
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.33.0
+  hooks:
+  - id: markdownlint
+    exclude: ^.github/PULL_REQUEST_TEMPLATE.md
+    args: [--disable=MD013]
